# sync-post

./: README.md  README_CN.md  package-lock.json  package.json  package.oo.yaml  pyproject.toml
flows/flow-1/: .flow.ui.oo.json  flow.oo.yaml
flows/flow-1/scriptlets/: +scriptlet#1.ts  +scriptlet#2.ts  +scriptlet#3.ts
tasks/previewer/: main.ts  task.oo.yaml
tasks/telegram-poster/: main.ts  task.oo.yaml
tasks/twitter-poster/: main.ts  task.oo.yaml
utils/: constants.ts  helper.ts
utils/optimizer/: linkedIn.ts  telegram.ts  twitter.ts
utils/service/: linkedIn.ts  telegram.ts  twitter.ts
